src/objects/Investment__c.object
<CustomObject>
    <fields>
        <fullName>Amount1__c</fullName>
        <inlineHelpText>Total amount in this investment.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Round_Share__c *  Shares__c</formula>
        <inlineHelpText>Shares * Share Amount</inlineHelpText>
        <label>Old_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Fund</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Investments made by investors (account type investor) linked to a particular round (which then links back to an account_type record = target).</description>
        <label>Investor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Investments</relationshipLabel>
        <relationshipName>Investments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_Voting_Shares__c</fullName>
        <label>Non-Voting Shares</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Voting__c</fullName>
        <formula>IF(Shares1__c==0, 100, (Shares__c * 100 /  Shares1__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Voting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Round__c</fullName>
        <formula>Shares1__c /  Round__r.Total_Committed_Sum_Shares__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage (Sum) of Series</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Round_Share__c</fullName>
        <inlineHelpText>Pulling in the value from the connected Round</inlineHelpText>
        <label>Share Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Round__c</fullName>
        <label>Series</label>
        <referenceTo>Round__c</referenceTo>
        <relationshipLabel>Investments</relationshipLabel>
        <relationshipName>Investments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Shares1__c</fullName>
        <formula>IF(AND(ISBLANK(Shares__c),ISBLANK(Non_Voting_Shares__c)),
0,
IF(AND(ISBLANK(Shares__c),NOT(ISBLANK(Non_Voting_Shares__c))), 0 + Non_Voting_Shares__c,
 IF(AND(ISBLANK(Non_Voting_Shares__c),NOT(ISBLANK(Shares__c))), 0 + Shares__c,
 Shares__c + Non_Voting_Shares__c)
)
)</formula>
        <label># Shares (formula)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shares__c</fullName>
        <label>Voting Shares</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Investment</label>
    <nameField>
        <displayFormat>INV{00000}</displayFormat>
        <label>Investment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>